add register ep
